Added support for an Active Storage image on dishes with image seeding from unsplash.

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -16,6 +16,7 @@
       <tr>
         <td><%= dish.name %></td>
         <td><%= dish.restaurant_id %></td>
+        <td><%= image_tag dish.image, width: 100 %></td>
         <td><%= link_to 'Show', dish %></td>
         <td><%= link_to 'Edit', edit_dish_path(dish) %></td>
         <td><%= link_to 'Destroy', dish, method: :delete, data: { confirm: 'Are you sure?' } %></td>
